# microservices-pet

./: README.md  docker-compose.yml  makefile
.github/workflows/: ci.yml
api_gateway/: Dockerfile  config.py  main.py  pyproject.toml  pytest.ini
api_gateway/etcd_client/: client.py
api_gateway/health_check/: health_check.py
api_gateway/quorum_strategies/: common_strategy.py  everyone_write_strategy.py  strategy.py
api_gateway/tests/integration/: test_etcd.py
e2e/: Dockerfile  test_e2e.py
node/: config.py  main.py  pyproject.toml  run.sh
node/domain/: task.py
node/repos/: in_memory_repo.py  task_repository.py
node/service/: gateway_service.py  task_service.py
node/tests/integration/: test_tasks_api.py
