[project]
name = "api-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "etcd3>=0.12.0",
    "fastapi>=0.115.2",
    "httpx>=0.27.2",
    "protobuf==3.20",
    "requests>=2.32.3",
    "uvicorn>=0.31.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]
