[project]
name = "node"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.2",
    "uvicorn>=0.31.1",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.2",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
]
